--- a/bundles/specmate-config/config/specmate-config.properties
+++ b/bundles/specmate-config/config/specmate-config.properties
@@ -51,8 +51,23 @@ search.maxResults 		= 100
 
 # Projects
 ## List of project ids, each project listed here needs to be configured below
-project.projects = test-data
+project.projects = ppmtest
 
+
+### Config Connector
+ project.ppmtest.connector.pid = com.specmate.HPServerProxyConnector
+ project.ppmtest.connector.hpproxy.hpConnectorHost    = localhost
+ project.ppmtest.connector.hpproxy.hpConnectorPort    = 8081
+ project.ppmtest.connector.hpproxy.hpConnectorTimeout = 20
+ project.ppmtest.connector.projectName = AZD_Anforderung
+ project.ppmtest.connector.connectorID = ppmtest
+
+### Config Exporter
+project.ppmtest.exporter.pid = com.specmate.HPServerProxyExporter
+project.ppmtest.exporter.hpproxy.hpConnectorHost    = localhost
+project.ppmtest.exporter.hpproxy.hpConnectorPort    = 8081
+project.ppmtest.exporter.hpproxy.hpConnectorTimeout = 20
+project.ppmtest.exporter.exporterID = ppmtest
 ## Config for project test-data
 ### List of library folder ids
 project.test-data.library = libfolder1, libfolder2, libfolder3
